--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,8 @@ name: update-predictions
 
 on:
   schedule:
-    - cron: '0 12 * * *' # runs at 12:00 UTC everyday
+    #- cron: '0 12 * * *' # runs at 12:00 UTC everyday
+    - cron: '0 */5 * ? * *' # testing (run every 5 mins)
 
 jobs:
   build:
